; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/paravirt/extr_paravirt-irq.c_irq_core_ack.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/paravirt/extr_paravirt-irq.c_irq_core_ack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_data = type { i32 }
%struct.core_chip_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.irq_data*)* @irq_core_ack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @irq_core_ack(%struct.irq_data* %0) #0 {
  %2 = alloca %struct.irq_data*, align 8
  %3 = alloca %struct.core_chip_data*, align 8
  %4 = alloca i32, align 4
  store %struct.irq_data* %0, %struct.irq_data** %2, align 8
  %5 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %6 = call %struct.core_chip_data* @irq_data_get_irq_chip_data(%struct.irq_data* %5)
  store %struct.core_chip_data* %6, %struct.core_chip_data** %3, align 8
  %7 = load %struct.core_chip_data*, %struct.core_chip_data** %3, align 8
  %8 = getelementptr inbounds %struct.core_chip_data, %struct.core_chip_data* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = shl i32 256, %10
  %12 = call i32 @clear_c0_status(i32 %11)
  %13 = load i32, i32* %4, align 4
  %14 = icmp ult i32 %13, 2
  br i1 %14, label %15, label %19

15:                                               ; preds = %1
  %16 = load i32, i32* %4, align 4
  %17 = shl i32 256, %16
  %18 = call i32 @clear_c0_cause(i32 %17)
  br label %19

19:                                               ; preds = %15, %1
  ret void
}

declare dso_local %struct.core_chip_data* @irq_data_get_irq_chip_data(%struct.irq_data*) #1

declare dso_local i32 @clear_c0_status(i32) #1

declare dso_local i32 @clear_c0_cause(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
